--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-react": "^7.22.15",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^27.5.1",
     "sinon": "^6.3.3"
   }
 }
